--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+DASHBOARD_TOP_NAVIGATION=false
+DASHBOARD_SPA=true
